# QuantumMind

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  example.env  manage.py  pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py  0002_account_delete_register.py
ai_shortener/di/: repository.py  use_case.py
project/: asgi.py  settings.py  urls.py  wsgi.py
public/: admin.py  asgi.py  models.py  settings.py  urls.py  wsgi.py
public/api/: __init__.py  ai_shortener_api.py  sessions_api.py
public/forms/: __init__.py  account_creation_form.py
public/frontend_api/: __init__.py  ai_shortener_api.py  session_api.py  sessions_api.py
public/migrations/: 0001_initial.py  0002_alter_chatsession_conversations.py  0002_app.py  0003_alter_chatsession_conversations_custommodel.py  0003_remove_app_redirect_uri_account_created_at_and_more.py  0004_remove_app_url_app_redirect_url.py  0004_rename_system_instruction_custommodel_description_and_more.py  0005_alter_account_options_alter_account_managers_and_more.py  0005_alter_botfriend_conversations_and_more.py  0006_alter_botfriend_conversations_and_more.py  0006_remove_chatsession_chat_id.py  0007_rename_description_custommodel_more_info_and_more.py  0008_url.py  0009_rename_image_url_img_base64_alter_url_long_url_and_more.py
public/templates/: base.html  home.html
public/utils/: __init__.py  utils.py
public/views/: __init__.py  account_login.py  account_register.py  home.py  my_friend.py  talk_to_ai.py
quantum_mind/: asgi.py  settings.py  urls.py  wsgi.py
services/di/: __init__.py  repository.py  use_case.py
(+56 files in other folders)
