[tool.poetry]
name = "quantum-mind"
version = "0.1.0"
description = ""
authors = ["Abdur-Rahim-sheikh <abi.rahim.sheikh@gmail.com>"]
readme = "README.md"
packages = [{include = "quantum_mind"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
environs = "^11.0.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
