[project]
name = "quantum-mind"
version = "0.1.0"
description = ""
authors = ["Abdur-Rahim-sheikh <abi.rahim.sheikh@gmail.com>"]
readme = "README.md"
packages = [{include = "public"}]
requires-python = ">=3.12"
dependencies = [
    "django>=5.0.6",
    "environs>=14.1.1",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.3",
    "social-auth-app-django>=5.4.1",
    "django-debug-toolbar>=4.4.2",
    "ollama>=0.3.0",
    "nanoid>=2.0.0",
]


[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
